--- a/style.css
+++ b/style.css
@@ -1,22 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
-* {
+body {
     font-family: 'Montserrat', sans-serif;
-      
+
+
 }
 
 .main-container {
     height: 100vh;
-    
+    max-width: 100vw;
     background-color: rgb(226, 226, 226);
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 8px;
     padding: 20px 50px;
-    
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
 }
 
 .nav-container {
     max-width: 400px;
-    width: 350px;
+    width: 300px;
     background-color: rgba(104, 104, 104, 0.223);
     backdrop-filter: blur(10px);
     padding: 10px 20px;
@@ -24,8 +30,7 @@
     display: flex;
     text-align: center;
     position: absolute;
-    left: 50%;
-    transform: translate(-150px,0px);
+
 }
 
 .nav-container img {
@@ -34,25 +39,102 @@
     backdrop-filter: blur(10px);
     padding: 10px;
     border-radius: 20px;
-    
+
 }
-.nav-container ul{
+
+.nav-container ul {
     list-style: none;
     display: flex;
-     
+
 }
-.nav-container ul li{
-    padding-left: 20px;
+
+.nav-container ul li {
+    padding-right: 20px;
     font-weight: 500;
 }
 
-a{
+a {
     text-decoration: none;
     color: rgb(0, 0, 0);
 }
-a:hover{
-    color:rgb(58, 13, 13);
+
+a:hover {
+    color: rgb(204, 61, 61);
     transition: transform 0.2s ease-out;
     transform: translateX(-2px);
 }
 
+
+/* intro-container css */
+
+.intro-container {
+    height: 500px;
+    
+    background-color: rgba(104, 104, 104, 0.223);
+    /* backdrop-filter: blur(10px); */
+    padding: 10px 20px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    top: 15%;
+
+}
+
+
+@media screen and (min-width: 450px) {
+    .intro-container{
+        max-width: 400px;
+    }
+    .intro-container .intro-title {
+        font-size: 60px;
+        text-align: center;
+        font-weight: 700;
+    }
+
+    .intro-container .intro-desc {
+        font-size: 16px;
+        padding:0px 30px ;
+        text-align: center;
+        font-weight: 400;
+    }
+}
+/* Adjust font sizes for larger screens using a media query */
+@media screen and (min-width: 768px) {
+    .intro-container{
+        max-width: 760px;
+    }
+    .intro-container .intro-title {
+        font-size: 70px;
+        text-align: center;
+        font-weight: 700;
+    }
+
+    .intro-container .intro-desc {
+        font-size: 18px;
+        padding:0px 100px ;
+        text-align: center;
+        font-weight: 400;
+    }
+}
+
+/* Adjust font sizes for even larger screens */
+@media screen and (min-width: 1200px) {
+    .intro-container{
+        max-width: 1200px;
+    }
+    .intro-container .intro-title {
+        
+        font-size: 100px;
+        text-align: center;
+        font-weight: 700;
+    }
+
+    .intro-container .intro-desc {
+        font-size: 20px;
+        padding:0px 100px ;
+        text-align: center;
+        font-weight: 400;
+    }
+}
