--- a/style.css
+++ b/style.css
@@ -101,6 +101,25 @@ a:hover {
     }
 }
 /* Adjust font sizes for larger screens using a media query */
+@media screen and (min-width: 400px) {
+    .intro-container{
+        max-width: 380px;
+        margin-top:30px ;
+        padding-bottom: 50px;
+    }
+    .intro-container .intro-title {
+        font-size: 70px;
+        text-align: center;
+        font-weight: 700;
+    }
+
+    .intro-container .intro-desc {
+        font-size: 18px;
+        padding:0px 20px ;
+        text-align: center;
+        font-weight: 400;
+    }
+}
 @media screen and (min-width: 768px) {
     .intro-container{
         max-width: 760px;
