--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a {
 }
 
 a:hover {
-    color: rgb(204, 61, 61);
+    color: rgb(77, 23, 5);
     transition: transform 0.2s ease-out;
     transform: translateX(-2px);
 }
@@ -82,10 +82,27 @@ a:hover {
 
 }
 
+.custom-decoration {
+    position: relative;
+}
+
+.custom-decoration::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 10px; /* Adjust the thickness of the line */
+    background-color: #4d262133; /* Your desired color */
+    z-index: -1; /* Place it behind the text */
+}
+
+
 
 @media screen and (min-width: 450px) {
     .intro-container{
         max-width: 400px;
+        margin-top:5px ;
     }
     .intro-container .intro-title {
         font-size: 60px;
@@ -123,6 +140,7 @@ a:hover {
 @media screen and (min-width: 768px) {
     .intro-container{
         max-width: 760px;
+        margin-top:5px ;
     }
     .intro-container .intro-title {
         font-size: 70px;
@@ -142,6 +160,7 @@ a:hover {
 @media screen and (min-width: 1200px) {
     .intro-container{
         max-width: 1200px;
+        margin-top:5px ;
     }
     .intro-container .intro-title {
         
