--- a/style.css
+++ b/style.css
@@ -39,7 +39,21 @@ body {
     backdrop-filter: blur(10px);
     padding: 10px;
     border-radius: 20px;
+    animation: breathe 3s infinite ease-in-out;
+}
 
+@keyframes breathe {
+
+    0%,
+    100% {
+        transform: scale(1);
+        transform: rotate(-5deg);
+    }
+
+    50% {
+        transform: scale(1.1);
+        transform: rotate(5deg);
+    }
 }
 
 .nav-container ul {
@@ -69,7 +83,7 @@ a:hover {
 
 .intro-container {
     height: 500px;
-    
+
     background-color: rgba(104, 104, 104, 0.223);
     /* backdrop-filter: blur(10px); */
     padding: 10px 20px;
@@ -82,28 +96,15 @@ a:hover {
 
 }
 
-.custom-decoration {
-    position: relative;
-}
-
-.custom-decoration::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 10px; /* Adjust the thickness of the line */
-    background-color: #4d262133; /* Your desired color */
-    z-index: -1; /* Place it behind the text */
-}
 
 
 
 @media screen and (min-width: 450px) {
-    .intro-container{
+    .intro-container {
         max-width: 400px;
-        margin-top:5px ;
+        margin-top: 5px;
     }
+
     .intro-container .intro-title {
         font-size: 60px;
         text-align: center;
@@ -111,19 +112,22 @@ a:hover {
     }
 
     .intro-container .intro-desc {
+        
         font-size: 16px;
-        padding:0px 30px ;
+        padding: 0px 10px;
         text-align: center;
         font-weight: 400;
     }
 }
+
 /* Adjust font sizes for larger screens using a media query */
 @media screen and (min-width: 350px) {
-    .intro-container{
+    .intro-container {
         max-width: 280px;
-        margin-top:20px ;
+        margin-top: 20px;
         padding-bottom: 50px;
     }
+
     .intro-container .intro-title {
         font-size: 50px;
         text-align: center;
@@ -132,16 +136,18 @@ a:hover {
 
     .intro-container .intro-desc {
         font-size: 18px;
-        padding:0px 20px ;
+        padding: 0px 10px;
         text-align: center;
         font-weight: 400;
     }
 }
+
 @media screen and (min-width: 768px) {
-    .intro-container{
+    .intro-container {
         max-width: 760px;
-        margin-top:5px ;
+        margin-top: 5px;
     }
+
     .intro-container .intro-title {
         font-size: 70px;
         text-align: center;
@@ -150,20 +156,22 @@ a:hover {
 
     .intro-container .intro-desc {
         font-size: 18px;
-        padding:0px 100px ;
+        padding: 0px 100px;
         text-align: center;
         font-weight: 400;
+       
     }
 }
 
 /* Adjust font sizes for even larger screens */
 @media screen and (min-width: 1200px) {
-    .intro-container{
+    .intro-container {
         max-width: 1200px;
-        margin-top:5px ;
+        margin-top: 5px;
     }
+
     .intro-container .intro-title {
-        
+
         font-size: 100px;
         text-align: center;
         font-weight: 700;
@@ -171,7 +179,7 @@ a:hover {
 
     .intro-container .intro-desc {
         font-size: 20px;
-        padding:0px 100px ;
+        padding: 0px 100px;
         text-align: center;
         font-weight: 400;
     }
