--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .main-container {
-    height: 100vh;
+    /* height: 100vh; */
     max-width: 100vw;
     background-color: rgb(226, 226, 226);
     background-repeat: no-repeat;
@@ -29,7 +29,8 @@ body {
     border-radius: 20px;
     display: flex;
     text-align: center;
-    position: absolute;
+    position: fixed;
+    /* position: absolute; */
 
 }
 
@@ -82,17 +83,18 @@ a:hover {
 /* intro-container css */
 
 .intro-container {
-    height: 500px;
+    /* height: 500px; */
 
     background-color: rgba(104, 104, 104, 0.223);
+    width: 100%;
     /* backdrop-filter: blur(10px); */
     padding: 10px 20px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     text-align: center;
-    position: absolute;
-    top: 15%;
+    /* position: absolute; */
+    /* top: 15%; */
 
 }
 
@@ -112,7 +114,7 @@ a:hover {
     }
 
     .intro-container .intro-desc {
-        
+
         font-size: 16px;
         padding: 0px 10px;
         text-align: center;
@@ -159,7 +161,7 @@ a:hover {
         padding: 0px 100px;
         text-align: center;
         font-weight: 400;
-       
+
     }
 }
 
@@ -183,4 +185,208 @@ a:hover {
         text-align: center;
         font-weight: 400;
     }
+}
+
+/* project section css */
+.project-container {
+    background-color: rgba(104, 104, 104, 0.223);
+    padding: 10px 20px;
+    border-radius: 20px;
+    width: 100%;
+    height: 600px;
+    /* flex-direction: column; */
+    text-align: center;
+    margin-top: 10px;
+    position: relative;
+
+}
+
+.project-header {
+    color: rgb(77, 23, 5);
+    width: 300px;
+    font-weight: 700;
+    font-size: 26px;
+    position: relative;
+    background-color: rgba(125, 122, 122, 0.4);
+    padding: 30px;
+    border-radius: 35px;
+    position: absolute;
+   
+    left: 20px;
+}
+.project-tile{
+    background-color: rgba(0, 0, 0, 0.266);
+    backdrop-filter: blur(10px);
+    height: 450px;
+    width: 400px;
+    border-radius: 50px;
+    position: absolute;
+    left: 30px;
+    top:150px;
+    background-image: url("assets/project_1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.project-tile2{
+    background-color: rgba(0, 0, 0, 0.266);
+    backdrop-filter: blur(10px);
+    height: 450px;
+    width: 600px;
+    border-radius: 50px;
+    position: absolute;
+    right: 30px;
+    top:150px;
+    background-image: url("assets/project_2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 350px) {
+    .project-container {
+        height: 900px;
+    }
+
+
+    .project-header {
+        
+        width: 230px;
+        font-weight: 700;
+        font-size: 24px;
+        
+    }
+    .project-tile{
+        
+        height: 350px;
+        width: 280px;
+        border-radius: 50px;
+        position: absolute;
+        left: 25px;
+        top:150px;
+    }
+    
+    .project-tile2{
+        background-color: rgba(0, 0, 0, 0.266);
+        backdrop-filter: blur(10px);
+        height: 350px;
+        width: 280px;
+        border-radius: 50px;
+        position: absolute;
+        right: 0px;
+        left: 25px;
+        top:520px;
+    }
+}
+
+
+@media screen and(min-width: 768px){
+    .project-container {
+        background-color: rgba(104, 104, 104, 0.223);
+        padding: 10px 20px;
+        border-radius: 20px;
+        width: 100%;
+        height: 600px;
+        /* flex-direction: column; */
+        text-align: center;
+        margin-top: 10px;
+        position: relative;
+    
+    }
+    
+    .project-header {
+        color: rgb(77, 23, 5);
+        width: 300px;
+        font-weight: 700;
+        font-size: 26px;
+        position: relative;
+        background-color: rgba(125, 122, 122, 0.4);
+        padding: 30px;
+        border-radius: 35px;
+        position: absolute;
+       
+        left: 20px;
+    }
+    .project-tile{
+        background-color: rgba(185, 55, 55, 0.266);
+        backdrop-filter: blur(10px);
+        height: 450px;
+        width: 400px;
+        border-radius: 50px;
+        position: absolute;
+        left: 30px;
+        top:150px;
+    }
+    
+    .project-tile2{
+        background-color: rgba(0, 0, 0, 0.266);
+        backdrop-filter: blur(10px);
+        height: 450px;
+        width: 800px;
+        border-radius: 50px;
+        position: absolute;
+        right: 30px;
+        top:150px;
+    }
+}
+
+@media screen and(min-width: 1200px){
+    .project-container {
+        background-color: rgba(104, 104, 104, 0.223);
+        padding: 10px 20px;
+        border-radius: 20px;
+        width: 100%;
+        height: 600px;
+        /* flex-direction: column; */
+        text-align: center;
+        margin-top: 10px;
+        position: relative;
+    
+    }
+    
+    .project-header {
+        color: rgb(77, 23, 5);
+        width: 300px;
+        font-weight: 700;
+        font-size: 26px;
+        position: relative;
+        background-color: rgba(125, 122, 122, 0.4);
+        padding: 30px;
+        border-radius: 35px;
+        position: absolute;
+       
+        left: 20px;
+    }
+    .project-tile{
+        background-color: rgba(185, 55, 55, 0.266);
+        backdrop-filter: blur(10px);
+        height: 450px;
+        width: 400px;
+        border-radius: 50px;
+        position: absolute;
+        left: 30px;
+        top:150px;
+    }
+    
+    .project-tile2{
+        background-color: rgba(0, 0, 0, 0.266);
+        backdrop-filter: blur(10px);
+        height: 450px;
+        width: 800px;
+        border-radius: 50px;
+        position: absolute;
+        right: 30px;
+        top:150px;
+    }
+}
+
+h3{
+    color: white;
+    background-color: rgba(128, 128, 128, 0.414);
+    backdrop-filter: blur(10px);
+    border-radius: 18px;
+    margin: 30px;
+    padding: 15px 25px;
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
 }
