--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ a:hover {
     background-color: rgba(104, 104, 104, 0.223);
     padding: 10px 20px;
     border-radius: 20px;
-    width: 100%;
+    width: 55%;
     height: 600px;
     /* flex-direction: column; */
     text-align: center;
@@ -283,23 +283,19 @@ a:hover {
 }
 
 
-@media screen and(min-width: 768px){
+@media screen and (min-width: 768px){
     .project-container {
-        background-color: rgba(104, 104, 104, 0.223);
-        padding: 10px 20px;
-        border-radius: 20px;
-        width: 100%;
-        height: 600px;
-        /* flex-direction: column; */
+        
+        width: 62%;
+        height: 1100px;
         text-align: center;
-        margin-top: 10px;
-        position: relative;
+       
     
     }
     
     .project-header {
         color: rgb(77, 23, 5);
-        width: 300px;
+        width: 350px;
         font-weight: 700;
         font-size: 26px;
         position: relative;
@@ -314,7 +310,7 @@ a:hover {
         background-color: rgba(185, 55, 55, 0.266);
         backdrop-filter: blur(10px);
         height: 450px;
-        width: 400px;
+        width: 390px;
         border-radius: 50px;
         position: absolute;
         left: 30px;
@@ -325,20 +321,21 @@ a:hover {
         background-color: rgba(0, 0, 0, 0.266);
         backdrop-filter: blur(10px);
         height: 450px;
-        width: 800px;
+        width: 390px;
         border-radius: 50px;
         position: absolute;
-        right: 30px;
-        top:150px;
+        right: 0px;
+        left: 25px;
+        top:630px;
     }
 }
 
-@media screen and(min-width: 1200px){
+@media screen and (min-width: 1200px){
     .project-container {
         background-color: rgba(104, 104, 104, 0.223);
         padding: 10px 20px;
         border-radius: 20px;
-        width: 100%;
+        width:1100px;
         height: 600px;
         /* flex-direction: column; */
         text-align: center;
@@ -375,10 +372,10 @@ a:hover {
         background-color: rgba(0, 0, 0, 0.266);
         backdrop-filter: blur(10px);
         height: 450px;
-        width: 800px;
+        width: 630px;
         border-radius: 50px;
         position: absolute;
-        right: 30px;
+        left: 470px;
         top:150px;
     }
 }
