--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
-body {
-    font-family: 'Montserrat', sans-serif;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+html,body {
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
+    height: 100%;
 
 }
 
 .main-container {
-    /* height: 100vh; */
-    max-width: 100vw;
+    
+    max-width: 100%;
+    /* background-color: antiquewhite; */
     background-color: rgb(226, 226, 226);
     background-repeat: no-repeat;
     background-size: cover;
@@ -28,19 +36,22 @@ body {
     padding: 10px 20px;
     border-radius: 20px;
     display: flex;
+    gap: 15px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     z-index: 100;
-    /* position: absolute; */
+    
 
 }
 
 .nav-container img {
-    height: 35px;
-    background-color: rgba(184, 185, 184, 0.511);
-    backdrop-filter: blur(10px);
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.916);
+    /* backdrop-filter: blur(10px); */
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 10px;
     animation: breathe 3s infinite ease-in-out;
 }
 
@@ -53,7 +64,7 @@ body {
     }
 
     50% {
-        transform: scale(1.1);
+        transform: scale(1.5);
         transform: rotate(5deg);
     }
 }
@@ -66,7 +77,7 @@ body {
 
 .nav-container ul li {
     padding-right: 20px;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 a {
@@ -84,19 +95,16 @@ a:hover {
 /* intro-container css */
 
 .intro-container {
-    /* height: 500px; */
-
     background-color: rgba(104, 104, 104, 0.223);
     width: 100%;
-    /* backdrop-filter: blur(10px); */
     padding: 10px 20px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     text-align: center;
-    /* position: absolute; */
-    /* top: 15%; */
-
+    justify-content: center;
+    gap: 35px;
+    
 }
 
 
@@ -211,9 +219,8 @@ a:hover {
     position: relative;
     background-color: rgba(125, 122, 122, 0.4);
     padding: 30px;
-    border-radius: 35px;
+    border-radius: 20px;
     position: absolute;
-   
     left: 20px;
 }
 .project-tile{
@@ -352,7 +359,7 @@ a:hover {
         position: relative;
         background-color: rgba(125, 122, 122, 0.4);
         padding: 30px;
-        border-radius: 35px;
+        border-radius: 25px;
         position: absolute;
        
         left: 20px;
@@ -375,12 +382,12 @@ a:hover {
         width: 630px;
         border-radius: 50px;
         position: absolute;
-        left: 470px;
+        left: 450px;
         top:150px;
     }
 }
 
-h3{
+.project-tile h3 , .project-tile2 h3{
     color: white;
     background-color: rgba(128, 128, 128, 0.414);
     backdrop-filter: blur(10px);
@@ -390,4 +397,63 @@ h3{
     position: absolute;
     bottom: 5px;
     right: 10px;
+}
+
+
+/* career section */
+.career-container{
+    background-color: rgb(212, 212, 212);
+    border-radius: 20px;
+    position: relative;
+    margin: 15px;
+    padding: 20px;
+    display: flex;
+
+
+}
+
+.career-container .career-left{
+    /* background-color: rgb(197, 197, 197); */
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    flex: 2;
+}
+.career-left button{
+    width: 160px;
+    font-size: 14px;
+    font-weight: 500;
+    background-color: black;
+    border-radius: 15px;
+    border: none;
+    color:white;
+    padding: 10px 10px;
+    margin-top: 10px;
+    
+}
+
+.career-left button:hover{
+    transition:transform 0.2s ease-out;
+    transform: translateY(2px);
+    background-color: rgb(22, 22, 22);
+}
+
+.career-container .career-right{
+    /* background-color: rgb(197, 197, 197); */
+    padding: 20px;
+    flex: 1;
+   
+}
+
+.career-container .career-right h5{
+    color: white;
+    background-color: rgba(0, 0, 0, 0.414);
+    border-radius: 8px;
+    padding: 5px 5px;
+    width: 15%;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    
 }
