--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ a:hover {
 
 @media screen and (min-width: 450px) {
     .intro-container {
-        max-width: 400px;
+        /* max-width: 400px; */
         margin-top: 5px;
     }
 
@@ -134,7 +134,7 @@ a:hover {
 /* Adjust font sizes for larger screens using a media query */
 @media screen and (min-width: 350px) {
     .intro-container {
-        width: 270px;
+        /* width: 270px; */
         margin-top: 90px;
         padding-bottom: 50px;
     }
@@ -155,7 +155,7 @@ a:hover {
 
 @media screen and (min-width: 768px) {
     .intro-container {
-        width: 760px;
+        /* width: 760px; */
         margin-top: 85px;
     }
 
@@ -178,7 +178,9 @@ a:hover {
 @media screen and (min-width: 1200px) {
     .intro-container {
         /* width: 1200px; */
+        width: 100%;
         min-width: 1100px;
+        width: 100%;
         margin-top: 85px;
     }
 
@@ -405,22 +407,20 @@ a:hover {
     background-color: rgb(212, 212, 212);
     border-radius: 20px;
     position: relative;
-    margin: 15px;
-    padding: 20px;
-    display: flex;
-
-
-}
-
-.career-container .career-left{
-    /* background-color: rgb(197, 197, 197); */
+    width: 100%;
+    margin: 20px;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    flex: 2;
+    gap:5px;
+
+
 }
-.career-left button{
+
+.career-container p {
+    margin: 15px 0px;
+}
+.career-container button{
     width: 160px;
     font-size: 14px;
     font-weight: 500;
@@ -433,25 +433,23 @@ a:hover {
     
 }
 
-.career-left button:hover{
+.career-container button:hover{
     transition:transform 0.2s ease-out;
     transform: translateY(2px);
     background-color: rgb(22, 22, 22);
 }
 
-.career-container .career-right{
-    /* background-color: rgb(197, 197, 197); */
-    padding: 20px;
-    flex: 1;
-   
+.tags-container{
+    display: flex;
+    margin-bottom: 8px;
 }
 
-.career-container .career-right h5{
-    color: white;
-    background-color: rgba(0, 0, 0, 0.414);
+.tags-container h5{
+    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.414);
     border-radius: 8px;
-    padding: 5px 5px;
-    width: 15%;
+    padding: 8px 15px;
+    margin-right: 8px;
     align-items: center;
     text-align: center;
     justify-content: center;
